--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
     --bg-color-item: #F5F4FA;
     --border-grey: #EEEEEE;
     --border-header: #ECECEC;
+    --timing-function: cubic-bezier(0.4,0,0.2,1);
+    --duration: 250ms;
 }
 
 html {
@@ -98,7 +100,7 @@ body {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    
+    position: relative;
     color: var(--secondary-title-color);
     font-size: 14px;
     font-weight: 500;
@@ -109,6 +111,31 @@ body {
 .nav-link:hover,
 .nav-link:focus {
     color: var(--akcent-color);
+    transition: var(--duration) var(--timing-function);
+}
+
+.nav-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--akcent-color);
+
+    opacity: 0;
+    /* transition: opacity var(--duration) var(--timing-function); */
+}
+
+/* .nav-link:hover::after,
+.nav-link:focus::after {
+    opacity: 1;
+} */
+
+.current.nav-link::after {
+    opacity: 1;
 }
 
 .current {
@@ -151,7 +178,7 @@ body {
 .contacts-link:hover,
 .contacts-link:focus {
     color: var(--akcent-color);
-    hei: ;
+    transition: var(--duration) var(--timing-function);
 }
 
 .contacts-item + .contacts-item {
