--- a/css/styles.css
+++ b/css/styles.css
@@ -665,3 +665,50 @@ body {
     letter-spacing: 0.48px;
 }
 
+.backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0,0.2);
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    min-width: 530px;
+    min-height: 580px;
+    background-color: var(--white-bg-color);
+    border: rgba(0, 0, 0,0.1);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    display: block;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    padding-left: auto;
+    padding-right: auto;
+    margin: 0;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0,0.1);
+}
+
+.modal>p {
+    display: none;
+}
