--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
 .nav-link:hover,
 .nav-link:focus {
     color: var(--akcent-color);
-    transition: var(--duration) var(--timing-function);
+    transition: color var(--duration) var(--timing-function);
 }
 
 .nav-link::after {
@@ -318,12 +318,36 @@ body {
     display: flex;
 }
 
-.ourwork-img {
-    display: block;
+.ourwork-item {
+    position: relative;
 }
 
 .ourwork-item + .ourwork-item {
     margin-left: 30px;
+}
+
+.ourwork-img {
+    display: block;
+}
+
+.ourwork-direct-title {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 27 auto;
+    height: 70px;
+    font-size: 14px;
+    color: var(--first-title-color);
+    background-color: rgba(47,48,58,0.8);
+    /* text-align: center; */
+    font-weight: 700;
+    letter-spacing: 1.03px;
+    text-transform: uppercase;
 }
 
 .team {
