--- a/css/styles.css
+++ b/css/styles.css
@@ -126,13 +126,7 @@ body {
     background-color: var(--akcent-color);
 
     opacity: 0;
-    /* transition: opacity var(--duration) var(--timing-function); */
 }
-
-/* .nav-link:hover::after,
-.nav-link:focus::after {
-    opacity: 1;
-} */
 
 .current.nav-link::after {
     opacity: 1;
@@ -235,7 +229,7 @@ body {
 .hero-btn:focus {
     color: var(--akcent-color);
     background-color: var(--white-bg-color);
-    transition: color background-color var(--duration) var(--timing-function);
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function);
 }
 
 .features-flex {
@@ -483,7 +477,7 @@ body {
 .clients-link:focus {
     color: var(--akcent-color);
     border: 1px solid var(--akcent-color);
-    transition: var(--duration) var(--timing-function);
+    transition: color var(--duration) var(--timing-function), border var(--duration) var(--timing-function);
 }
 .icon-clients {
     /* width: 106px;
@@ -610,7 +604,7 @@ body {
     color: var(--white-color);
     background-color: var(--akcent-color);
     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-    transition: var(--duration) var(--timing-function);
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function), box-shadow var(--duration) var(--timing-function);
 }
 
 .projects-list {
