--- a/css/styles.css
+++ b/css/styles.css
@@ -333,12 +333,11 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    padding: 27 auto;
     height: 70px;
     font-size: 14px;
     color: var(--first-title-color);
     background-color: rgba(47,48,58,0.8);
-    /* text-align: center; */
+
     font-weight: 700;
     letter-spacing: 1.03px;
     text-transform: uppercase;
@@ -717,20 +716,23 @@ body {
     position: absolute;
     top: 14px;
     right: 14px;
-    display: inline-flex;
-    text-align: center;
-    /* width: 30px;
-    height: 30px; */
-    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    padding: 0px;
     margin: 0;
     border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0,0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    background-color: transparent;
 }
 
 .icon-modal-close {
     width: 18px;
     height: 18px;
-    
+    fill: var(--black-color);
 }
 
 .modal>p {
