--- a/css/styles.css
+++ b/css/styles.css
@@ -106,12 +106,12 @@ body {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.28px;
+    transition: color var(--duration) var(--timing-function);
 }
 
 .nav-link:hover,
 .nav-link:focus {
     color: var(--akcent-color);
-    transition: color var(--duration) var(--timing-function);
 }
 
 .nav-link::after {
@@ -124,7 +124,6 @@ body {
     height: 4px;
     border-radius: 2px;
     background-color: var(--akcent-color);
-
     opacity: 0;
 }
 
@@ -146,13 +145,13 @@ body {
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
-    
     color: var(--text-color);
     font-family: inherit;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.28px;
+    transition: color var(--duration) var(--timing-function);
 }
 
 .icon-envelope {
@@ -172,7 +171,6 @@ body {
 .contacts-link:hover,
 .contacts-link:focus {
     color: var(--akcent-color);
-    transition: color var(--duration) var(--timing-function);
 }
 
 .contacts-item + .contacts-item {
@@ -223,13 +221,13 @@ body {
     padding: 10px 24px;
     min-width: 200px;
     cursor: pointer;
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
     color: var(--akcent-color);
     background-color: var(--white-bg-color);
-    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function);
 }
 
 .features-flex {
@@ -426,6 +424,9 @@ body {
     width: 44px;
     height: 44px;
     color: var(--icon-color);
+    background-color: var(--white-bg-color);
+    border-radius: 50%;
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function);
 }
 
 .icon-team {
@@ -439,7 +440,6 @@ body {
     background-color: var(--akcent-color);
     border-radius: 50%;
     color: var(--white-color);
-    transition: background-color var(--duration) var(--timing-function);
 }
 
 .clients-title {
@@ -470,13 +470,13 @@ body {
     color: var(--icon-color);
     border: 1px solid var(--icon-color);
     border-radius: 4px;
+    transition: color var(--duration) var(--timing-function), border var(--duration) var(--timing-function);
 }
 
 .clients-link:hover,
 .clients-link:focus {
     color: var(--akcent-color);
     border: 1px solid var(--akcent-color);
-    transition: color var(--duration) var(--timing-function), border var(--duration) var(--timing-function);
 }
 .icon-clients {
     /* width: 106px;
@@ -552,12 +552,12 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     color: var(--first-title-color);
+    transition: background-color var(--duration) var(--timing-function);
 }
 
 .footer-socials-link:hover,
 .footer-socials-link:focus {
     background-color: var(--akcent-color);
-    transition: background-color var(--duration) var(--timing-function);
 }
 
 .icon-footer-socials {
@@ -581,6 +581,14 @@ body {
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function), box-shadow var(--duration) var(--timing-function);
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+    color: var(--white-color);
+    background-color: var(--akcent-color);
+    box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
 }
 
 .active {
@@ -596,14 +604,6 @@ body {
 
 .portfolio-item + .portfolio-item {
     margin-left: 8px;
-}
-
-.portfolio-btn:hover,
-.portfolio-btn:focus {
-    color: var(--white-color);
-    background-color: var(--akcent-color);
-    box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-    transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function), box-shadow var(--duration) var(--timing-function);
 }
 
 .projects-list {
@@ -689,6 +689,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0,0.2);
+    opacity: 1;
+    transition: opacity var(--duration) var(--timing-function);
 }
 
 .backdrop.is-hidden {
@@ -697,11 +699,14 @@ body {
     pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
 .modal {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
     min-width: 530px;
     min-height: 580px;
     padding: 40px;
@@ -709,7 +714,8 @@ body {
     border: rgba(0, 0, 0,0.1);
     border-radius: 4px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
-
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--duration) var(--timing-function);
 }
 
 .modal-close-btn {
