--- a/css/styles.css
+++ b/css/styles.css
@@ -618,11 +618,11 @@ body {
 
 .project-link {
     display: block;
+    transition: var(--duration) var(--timing-function);
 }
 
 .project-link:hover,
 .project-link:focus {
-    transition: var(--duration) var(--timing-function);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
     }
 
@@ -688,9 +688,9 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0,0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
-    transition: opacity var(--duration) var(--timing-function);
+    transition: opacity var(--duration) var(--timing-function),  visibility var(--duration) var(--timing-function);
 }
 
 .backdrop.is-hidden {
